--- a/Day-05/counter-app/package.json
+++ b/Day-05/counter-app/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "counter-app",
+  "name": "redux-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "rest": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
